[project]
name = "arkush"
description = "Arkush - your almighty API client"
authors = [
    {name = "Oleh Mazur", email = "oleh@four-velocity.com"},
]

keywords = ["development", "rest", "httpx", "api", "client", "openapi"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic :: 2",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dynamic = ["version"]
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.2",
    "typer>=0.12.5",
    "pyyaml>=6.0.2",
    "pydantic!=2.0.0,!=2.0.1,<3.0.0,>2.0.0",
]

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material[recommended,git,imaging] @ git+https://${TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git@9.5.34-insiders-4.53.12"
]
lint = [
    "mypy>=1.11.2",
    "ruff>=0.6.4",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
dev = [
    "ipython>=8.27.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source="file"
path = "arkush/__init__.py"
